--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
    <p>paragraaf 1</p>
 
+   <link rel="stylesheet" href="css/styles.css">
 
   <script type="text/javascript">
 
@@ -20,9 +21,6 @@
 </script>    
 
 <input type="button" value="Klik hier" onclick="ToonAlert();"/>
-
-  <link rel="stylesheet" href="style.css">
-
 
 
 <img src="foto''s/Strand.jpg" width="100px" height="100px"
